--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.81MB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-12.37MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-4.11MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-10.63MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-407.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-2.62MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
