--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-4.11MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-10.63MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-407.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-3.90MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.72MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-327.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.17MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
