--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.72MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-10.57MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-327.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-250.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-475.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-3.17MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
